# FloatingMemo

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  hotkey.rs  lib.rs  main.rs  paths.rs  tray.rs  window.rs
src-tauri/src/commands/: mod.rs  notes.rs  settings.rs  window.rs
src-tauri/src/db/: backup.rs  migrations.rs  mod.rs  settings.rs  sqlite.rs
src/api/: notes.ts  settings.ts
src/components/: CalendarView.tsx  Editor.tsx  LeftPane.tsx  MarkdownPreview.tsx  SearchPalette.tsx  SettingsPanel.tsx  Sidebar.tsx  TitleBar.tsx  TodoView.tsx
src/lib/: date.ts  markdown.ts
src/styles/: global.css
src/types/: markdown-it-task-lists.d.ts
